--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/tribon1980/test">View on GitHub</a>
 
-          <h1 id="project_title">Test</h1>
+          <h1 id="project_title">Tribon1980's Test Blog</h1>
           <h2 id="project_tagline">test</h2>
 
             <section id="downloads">
